// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link render correctly with no variant 1`] = `
<DocumentFragment>
  .cache-1jppk4e-StyledLink {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
}

.cache-1jppk4e-StyledLink:hover,
.cache-1jppk4e-StyledLink:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
    class="e4bq1r51 cache-1jppk4e-StyledLink"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .cache-ow94xv-StyledLink-primary {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #390171;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  color: #390171;
}

.cache-xkhaqm-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  padding-left: 2px;
  opacity: 0.5;
}

.cache-xkhaqm-StyledIcon-sizeStyles-StyledIcon.cache-xkhaqm-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: top;
}

<a
    class="e4bq1r51 cache-ow94xv-StyledLink-primary"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <svg
      class="e4bq1r50 etwatq50 cache-xkhaqm-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with to props 1`] = `
<DocumentFragment>
  .cache-ow94xv-StyledLink-primary {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #390171;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  color: #390171;
}

<a
    class="e4bq1r51 cache-ow94xv-StyledLink-primary"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render blue 1`] = `
<DocumentFragment>
  .cache-1ixn77i-StyledLink-generateVariant {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #1a4dbf;
}

.cache-1ixn77i-StyledLink-generateVariant:hover,
.cache-1ixn77i-StyledLink-generateVariant:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1ixn77i-StyledLink-generateVariant:hover,
.cache-1ixn77i-StyledLink-generateVariant:focus {
  color: #0e2965;
}

<a
    class="e4bq1r51 cache-1ixn77i-StyledLink-generateVariant"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render gray 1`] = `
<DocumentFragment>
  .cache-1wnfao4-StyledLink-generateVariant {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #b2b6c3;
}

.cache-1wnfao4-StyledLink-generateVariant:hover,
.cache-1wnfao4-StyledLink-generateVariant:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1wnfao4-StyledLink-generateVariant:hover,
.cache-1wnfao4-StyledLink-generateVariant:focus {
  color: #798096;
}

<a
    class="e4bq1r51 cache-1wnfao4-StyledLink-generateVariant"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render inherit 1`] = `
<DocumentFragment>
  .cache-1u6ab8v-StyledLink-inherit {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: inherit;
}

.cache-1u6ab8v-StyledLink-inherit:hover,
.cache-1u6ab8v-StyledLink-inherit:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1u6ab8v-StyledLink-inherit:hover,
.cache-1u6ab8v-StyledLink-inherit:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="e4bq1r51 cache-1u6ab8v-StyledLink-inherit"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render primary 1`] = `
<DocumentFragment>
  .cache-ow94xv-StyledLink-primary {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #390171;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  color: #390171;
}

<a
    class="e4bq1r51 cache-ow94xv-StyledLink-primary"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render white 1`] = `
<DocumentFragment>
  .cache-1nk5tmw-StyledLink-generateVariant {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #151a2d;
}

.cache-1nk5tmw-StyledLink-generateVariant:hover,
.cache-1nk5tmw-StyledLink-generateVariant:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1nk5tmw-StyledLink-generateVariant:hover,
.cache-1nk5tmw-StyledLink-generateVariant:focus {
  color: #000;
}

<a
    class="e4bq1r51 cache-1nk5tmw-StyledLink-generateVariant"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;
